Fix broken CSS selector.

--- a/view/frontend/web/css/source/_extend.less
+++ b/view/frontend/web/css/source/_extend.less
@@ -247,6 +247,6 @@
     left: 10px;
 }
 
-.braintree-paypal-logooneclick-container {
+.braintree-paypal-logo.oneclick-container {
     width: 100%;
 }
